# dbt-course

./: pyproject.toml
learn_snowflake/: dbt_project.yml
learn_snowflake/macros/: group_by.sql  suspend_warehouse.sql
learn_snowflake/models/example/: cumulative_orders_by_date.sql  my_first_dbt_model.sql  playing_with_tests.sql  schema.yml  snowflake_customers_purchases.sql
learn_snowflake/models/new/: dates.sql
learn_snowflake/snapshots/: first_model_snapshot.sql
learn_snowflake/tests/: assert_under_100m.sql  assert_under_10_percent_null.sql
